Navigation bar fixed. Instructor files added. Div places tryed to be fixed. It is not fixed entirely. General information still overlap.

--- a/Project_DBMS/static/signUp.css
+++ b/Project_DBMS/static/signUp.css
@@ -1,5 +1,5 @@
 body{
-	margin:0;
+	margin:20;
 	color:#6a6f8c;
 	background:#c8c8c8;
 	font:600 16px/18px 'Open Sans',sans-serif;
